# cargo-dependency-resolution

./: Cargo.toml
child/: Cargo.toml
