[package]
name = "dependency-resolution"
version = "0.1.0"
edition = "2021"

[dependencies]
# Builds with this commented out.
fastcrypto = "0.1.2"

solana-client = "1.14.5"
solana-sdk = "1.14.5"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/shelbyd/curve25519-dalek", branch = "zeroize-patch" }
